# sdo

./: CMakeLists.txt  README.md  build.sh  clear_build.sh  install.sh
server/: channel.h  client.h  client_cli.cpp  command.h  common.h.in  error.h  log.h  main.cpp  multimeter.h  server.h
src/client/: client_cli.cpp  client_qml.pro  main.cpp  multimeter.cpp  multimeter_model.cpp  qml.qrc  qtquickcontrols2.conf
src/client/include/: client.h  multimeter.h  multimeter_model.h
src/client/qml/: ColorButton.qml  ColorButton2.qml  Multimeter.qml  connect_failed.qml  main.qml
src/include/: common.h.in  error.h  log.h
src/server/: CMakeLists.txt  main.cpp
src/server/include/: channel.h  command.h  multimeter.h  server.h
